# flutter-rust-app-template

./: .gitignore  TEMPLATE.md  analysis_options.yaml  build.yaml  pubspec.yaml
android/app/: build.gradle
automate/: __main__.py
ios/Runner/: bridge_generated.h
lib/: app.dart  home.dart  main.dart
lib/bridge/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  wrapper.dart
lib/messages/: basic.pb.dart  basic.pbenum.dart  basic.pbjson.dart  basic.pbserver.dart  sample_module.pb.dart  sample_module.pbenum.dart  sample_module.pbjson.dart  sample_module.pbserver.dart
linux/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
messages/: basic.proto  sample_module.proto
native/hub/: Cargo.toml  build.rs
native/hub/src/: data_model.rs  lib.rs  sample_functions.rs
native/hub/src/bridge/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  mod.rs
native/hub/src/messages/: basic.rs  mod.rs  sample_module.rs
windows/runner/: main.cpp
