[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
prost-build = "0.11.9"
glob = "0.3.1"

[dependencies]
# Downloaded
flutter_rust_bridge = { version = "1.77.1", features = [
    "worker-single",
    "zero-copy",
] }
tokio = { version = "1.28.2", features = ["full"] }
prost = "0.11.9"
lazy_static = "1.4.0"
# In workspace
sample_crate = { path = "../sample_crate" }
